--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -41,14 +41,14 @@
         </div>
         <div class="d-flex mt-3 mb-3">
           <div>
-            <div class="dropdown mr-20 ">
+            <div class="dropdown mr-20">
               <button
                 class="btn btn-primary me-2 dropdown-toggle"
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-               Ingredients
+                Ingredients
               </button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -99,6 +99,36 @@
           </div>
         </div>
       </div>
+      <section>
+        <article>
+          <div class="imgArticle"></div>
+          <div class="txtArticle p-3">
+            <div class="d-flex justify-content-between mb-3">
+              <div class="nomMenu">Limonade de Coco</div>
+              <div class="timeMenu">
+                <img src="/Front-end/Picture/time.svg" alt=""> <span>10 min </span>
+                </div>
+            </div>
+            <div class="d-flex w-100">
+              <div class="w-50">
+                <ul>
+                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
+                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
+                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
+                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
+                </ul>
+              </div>
+              <div class="w-50">
+                <p class="recette">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Repellat consequuntur omnis at delectus sit dolor deleniti cum
+                  nisi facere iusto.
+                </p>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
