--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="">
         <div class="header-logo">
           <img
-            src="/Front-end/Picture/logo.svg"
+            src="/Picture/logo.svg"
             alt="Logo du site les petits plats"
             class="logoPrincipal mx-auto"
           />
@@ -100,13 +100,13 @@
         </div>
       </div>
       <section>
-        <article>
+        <article class="card">
           <div class="imgArticle"></div>
           <div class="txtArticle p-3">
             <div class="d-flex justify-content-between mb-3">
-              <div class="nomMenu">Limonade de Coco</div>
+              <div class="card_menu nomMenu">Limonade de Coco</div>
               <div class="timeMenu">
-                <img src="/Front-end/Picture/time.svg" alt=""> <span>10 min </span>
+                <img src="/Picture/time.svg" alt=""> <span>10 min </span>
                 </div>
             </div>
             <div class="d-flex w-100">
@@ -135,6 +135,6 @@
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
