corection du bug de la section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </div>
         </div>
       </div>
-      <section>
+      <section class="section">
         <article class="card">
           <div class="imgArticle"></div>
           <div class="txtArticle p-3">
