--- a/index.html
+++ b/index.html
@@ -136,5 +136,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="scripts/index.js"></script>
+    <script src="scripts/tri.js"></script>
   </body>
 </html>
