creation du fichier tri.js et mise en place du debut de la function sur l'input de recherche: searchInput qui va me selectionée l'input et lui mettre un addEventListener pour ecoutée les evenements

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <form class="form-inline">
             <input
               class="form-control mr-sm-2 inputSearch"
+              id="search-input"
               type="text"
               placeholder="Rechercher une recette"
               aria-label="Rechercher une recette"
