--- a/index.html
+++ b/index.html
@@ -86,15 +86,11 @@
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                id="buttonUstensiles"
               >
                 Ustensiles
               </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
+              <ul id="listUstensiles" class="dropdown-menu">
               </ul>
             </div>
           </div>
@@ -138,5 +134,6 @@
     ></script>
     <script type="module" src="scripts/index.js"></script>
     <script src="scripts/tri.js"></script>
+    <script src="scripts/buttonTri.js"></script>
   </body>
 </html>
