ajout de la function pour les ingredients

--- a/index.html
+++ b/index.html
@@ -48,16 +48,11 @@
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                id="buttonIngredients"
               >
                 Ingredients
               </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
+              <ul id="listIngredients" class="dropdown-menu"> </ul>
             </div>
           </div>
           <div>
@@ -67,15 +62,11 @@
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                id="buttonAppareils"
               >
                 Appareils
               </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
+              <ul id="listAppareils" class="dropdown-menu">
               </ul>
             </div>
           </div>
