--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               >
                 Ingredients
               </button>
-              <ul id="listIngredients" class="dropdown-menu"> </ul>
+              <ul id="listIngredients" class="dropdown-menu"></ul>
             </div>
           </div>
           <div>
@@ -66,8 +66,7 @@
               >
                 Appareils
               </button>
-              <ul id="listAppareils" class="dropdown-menu">
-              </ul>
+              <ul id="listAppareils" class="dropdown-menu"></ul>
             </div>
           </div>
           <div>
@@ -81,41 +80,13 @@
               >
                 Ustensiles
               </button>
-              <ul id="listUstensiles" class="dropdown-menu">
-              </ul>
+              <ul id="listUstensiles" class="dropdown-menu"></ul>
             </div>
           </div>
         </div>
       </div>
       <section class="section">
-        <article class="card">
-          <div class="imgArticle"></div>
-          <div class="txtArticle p-3">
-            <div class="d-flex justify-content-between mb-3">
-              <div class="card_menu nomMenu">Limonade de Coco</div>
-              <div class="timeMenu">
-                <img src="/Picture/time.svg" alt=""> <span>10 min </span>
-                </div>
-            </div>
-            <div class="d-flex w-100">
-              <div class="w-50">
-                <ul>
-                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
-                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
-                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
-                  <li class="list">Lait de coco : <span class="qte">400g</span></li>
-                </ul>
-              </div>
-              <div class="w-50">
-                <p class="recette">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Repellat consequuntur omnis at delectus sit dolor deleniti cum
-                  nisi facere iusto.
-                </p>
-              </div>
-            </div>
-          </div>
-        </article>
+      
       </section>
     </main>
     <script
