--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </div>
       </div>
-      <section class="section">
+      <section id="section">
       
       </section>
     </main>
@@ -95,7 +95,7 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="scripts/index.js"></script>
-    <script src="scripts/tri.js"></script>
+    <script type="module" src="scripts/tri.js"></script>
     <script src="scripts/buttonTri.js"></script>
   </body>
 </html>
