--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     ></script>
     <script type="module" src="scripts/index.js"></script>
     <script type="module" src="scripts/tri.js"></script>
+    <script type="module"  src="/test.js"></script>
     <script src="scripts/buttonTri.js"></script>
   </body>
 </html>
