refactoring du code

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="scripts/displayCard.js"></script>
     <script type="module" src="scripts/tri.js"></script>
     <script type="module"  src="/test.js"></script>
     <script src="scripts/buttonTri.js"></script>
