--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     ></script>
     <script type="module" src="scripts/index.js"></script>
     <script type="module" src="scripts/displayCard.js"></script>
-    <script type="module" src="scripts/tri.js"></script>
-    <script type="module"  src="/test.js"></script>
-    <script src="scripts/buttonTri.js"></script>
+    <script type="module" src="scripts/sortDisplayCard.js"></script>
+    <script type="module"  src="scripts/sortListeInput.js"></script>
+    <script src="scripts/displayListe.js"></script>
   </body>
 </html>
