--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           </form>
         </div>
         <div class="d-flex mt-3 mb-3">
+          <div id="filtres" ></div>
 
 
           <div>
