--- a/index.html
+++ b/index.html
@@ -40,57 +40,56 @@
             />
           </form>
         </div>
-        <div class="d-flex mt-3 mb-3">
-          <div id="filtres" ></div>
+        <div class="d-flex mt-3 mb-3 flex-column">
+          <div id="filtres"></div>
 
-
-          <div>
-            <div class="dropdown mr-20">
-              <button
-                class="btn btn-primary me-2 dropdown-toggle"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                id="buttonIngredients"
-              >
-                Ingredients
-              </button>
-              <ul id="listIngredients" class="dropdown-menu"></ul>
+          <div class="d-flex mt-4">
+            <div>
+              <div class="dropdown mr-20">
+                <button
+                  class="btn btn-primary me-2 dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  id="buttonIngredients"
+                >
+                  Ingredients
+                </button>
+                <ul id="listIngredients" class="dropdown-menu"></ul>
+              </div>
             </div>
-          </div>
-          <div>
-            <div class="dropdown">
-              <button
-                class="btn btn-success me-2 dropdown-toggle"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                id="buttonAppareils"
-              >
-                Appareils
-              </button>
-              <ul id="listAppareils" class="dropdown-menu"></ul>
+            <div>
+              <div class="dropdown">
+                <button
+                  class="btn btn-success me-2 dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  id="buttonAppareils"
+                >
+                  Appareils
+                </button>
+                <ul id="listAppareils" class="dropdown-menu"></ul>
+              </div>
             </div>
-          </div>
-          <div>
-            <div class="dropdown">
-              <button
-                class="btn btn-danger dropdown-toggle"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                id="buttonUstensiles"
-              >
-                Ustensiles
-              </button>
-              <ul id="listUstensiles" class="dropdown-menu"></ul>
+            <div>
+              <div class="dropdown">
+                <button
+                  class="btn btn-danger dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  id="buttonUstensiles"
+                >
+                  Ustensiles
+                </button>
+                <ul id="listUstensiles" class="dropdown-menu"></ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <section id="section">
-      
-      </section>
+      <section id="section"></section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
@@ -101,5 +100,6 @@
     <script type="module" src="scripts/displayCard.js"></script>
     <script type="module" src="scripts/sortDisplayCard.js"></script>
     <script type="module" src="scripts/displayListe.js"></script>
+    <script src="https://kit.fontawesome.com/98f4d11235.js" crossorigin="anonymous"></script>
   </body>
 </html>
