mise en place du css des liste avec bootstrapp

--- a/index.html
+++ b/index.html
@@ -46,44 +46,26 @@
           <div class="d-flex mt-4">
             <div>
               <div class="dropdown mr-20">
-                <button
-                  class="btn btn-primary me-2 dropdown-toggle"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  id="buttonIngredients"
-                >
+                <button class="btn btn-primary me-2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttonIngredients">
                   Ingredients
                 </button>
-                <ul id="listIngredients" class="dropdown-menu"></ul>
+                <ul id="listIngredients" class="dropdown-menu bg-primary min-w-600 fs-20 text-white" style="min-width: 600px;"></ul>
               </div>
             </div>
             <div>
-              <div class="dropdown">
-                <button
-                  class="btn btn-success me-2 dropdown-toggle"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  id="buttonAppareils"
-                >
+              <div class="dropdown mr-20">
+                <button class="btn btn-success me-2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttonAppareils">
                   Appareils
                 </button>
-                <ul id="listAppareils" class="dropdown-menu"></ul>
+                <ul id="listAppareils" class="dropdown-menu bg-success fs-20 text-white" style="min-width: 600px;"></ul>
               </div>
             </div>
             <div>
-              <div class="dropdown">
-                <button
-                  class="btn btn-danger dropdown-toggle"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  id="buttonUstensiles"
-                >
+              <div class="dropdown mr-20">
+                <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttonUstensiles">
                   Ustensiles
                 </button>
-                <ul id="listUstensiles" class="dropdown-menu"></ul>
+                <ul id="listUstensiles" class="dropdown-menu bg-danger min-w-600 fs-20 text-white" style="min-width: 600px;"></ul>
               </div>
             </div>
           </div>
@@ -91,6 +73,7 @@
       </div>
       <section id="section"></section>
     </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
