--- a/index.html
+++ b/index.html
@@ -46,26 +46,56 @@
           <div class="d-flex mt-4">
             <div>
               <div class="dropdown mr-20">
-                <button class="btn btn-primary me-2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttonIngredients">
+                <button
+                  class="btn btn-primary me-2 dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  id="buttonIngredients"
+                >
                   Ingredients
                 </button>
-                <ul id="listIngredients" class="dropdown-menu bg-primary min-w-600 fs-20 text-white" style="min-width: 600px;"></ul>
+                <ul
+                  id="listIngredients"
+                  class="dropdown-menu bg-primary min-w-600 fs-20 text-white"
+                  style="min-width: 600px"
+                ></ul>
               </div>
             </div>
             <div>
               <div class="dropdown mr-20">
-                <button class="btn btn-success me-2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttonAppareils">
+                <button
+                  class="btn btn-success me-2 dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  id="buttonAppareils"
+                >
                   Appareils
                 </button>
-                <ul id="listAppareils" class="dropdown-menu bg-success fs-20 text-white" style="min-width: 600px;"></ul>
+                <ul
+                  id="listAppareils"
+                  class="dropdown-menu bg-success fs-20 text-white"
+                  style="min-width: 600px"
+                ></ul>
               </div>
             </div>
             <div>
               <div class="dropdown mr-20">
-                <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="buttonUstensiles">
+                <button
+                  class="btn btn-danger dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  id="buttonUstensiles"
+                >
                   Ustensiles
                 </button>
-                <ul id="listUstensiles" class="dropdown-menu bg-danger min-w-600 fs-20 text-white" style="min-width: 600px;"></ul>
+                <ul
+                  id="listUstensiles"
+                  class="dropdown-menu bg-danger min-w-600 fs-20 text-white"
+                  style="min-width: 600px"
+                ></ul>
               </div>
             </div>
           </div>
@@ -83,6 +113,9 @@
     <script type="module" src="scripts/displayCard.js"></script>
     <script type="module" src="scripts/sortDisplayCard.js"></script>
     <script type="module" src="scripts/displayListe.js"></script>
-    <script src="https://kit.fontawesome.com/98f4d11235.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/98f4d11235.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
